--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -24,7 +24,10 @@
             <i class="fas fa-user"></i> Bonjour {{ g.user['username'] }}
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/create">Vendre un livre</a>
+            {% if g.admin %}
+            <a class="dropdown-item" href="/admin">Administration</a>
+            {% endif %}
+            <a class="dropdown-item" href="/create">Vendre un livre</a>
             <a class="dropdown-item" href="/inventory">Ma boutique</a>
             <a class="dropdown-item" href="/category/create">Ajouter une catégorie</a>
             <a class="dropdown-item" href="/category/index">Mes catégories</a>
@@ -37,8 +40,6 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="btn btn-primary" style="margin-left:20px" href="{{ url_for('auth.login') }}">Se connecter</a>
             <a class="dropdown-item" href="{{ url_for('auth.register') }}">Nouveau ? S'enregistrer</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
           </div>
           {% endif %}
         </li>
