--- a/book/templates/product/home.html
+++ b/book/templates/product/home.html
@@ -18,7 +18,9 @@
         <div class="list-group">
           {% for category in categories %}
           <a href="#" class="list-group-item">{{ category['name'] }}</a>
-          {% endfor %}
+              {% if not loop.last %}
+              {% endif %}
+              {% endfor %}
         </div>
 
       </div>
