--- a/book/templates/administration/category.html
+++ b/book/templates/administration/category.html
@@ -19,19 +19,19 @@
           <br />
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Utilisateurs</a>
+            <a class="nav-link" href="/admin">Utilisateurs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="admin/category">Catégories</a>
+            <a class="nav-link active" href="#">Catégories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="admin/product">Produits</a>
+            <a class="nav-link" href="../admin/product">Produits</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Commentaires</a>
           </li>
       </ul>
-        <h3 class="mt-3">Gestion des utilisateurs</h3>
+        <h3 class="mt-3">Gestion des catégories</h3>
 
           <div class="col">
 
@@ -40,19 +40,16 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Nom</th>
-                  <th scope="col">Admin</th>
                   <th scope="col">Action</th>
                 </tr>
               </thead>
               <tbody>
-              {% for admin in users %}
+              {% for admin in categories %}
                 <tr>
                   <th scope="row">{{ admin['id'] }}</th>
-                  <td>{{ admin['username'] }}</td>
-                  <td>{{ admin['isAdmin'] }}</td>
+                  <td>{{ admin['name'] }}</td>
                   <td>
-                      <form action="{{ url_for('admin.delete', id=admin['id']) }}" method="post">
-                      <a role="button" class="btn btn-primary btn-sm mb-2" href="{{ url_for('admin.update', id=admin['id']) }}" class="btn btn-danger"><i class="fas fa-edit"></i></a>
+                      <form action="{{ url_for('admin.delete_category', id=admin['id']) }}" method="post">
                       <input class="btn btn-danger btn-sm mb-2" type="submit" value="Supprimer" onclick="return confirm('Are you sure?');">
                       </form>
                   </td>
