--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -43,6 +43,14 @@
           </div>
           {% endif %}
         </li>
+          <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" href="#" id="navCats" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Catégories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navCats">
+          {% include 'categories.html' %}
+        </div>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> Mon panier</a>
           </li>
@@ -54,6 +62,7 @@
       </div>
     </div>
   </nav>
+
 
   {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
