--- a/book/templates/product/detail.html
+++ b/book/templates/product/detail.html
@@ -15,14 +15,6 @@
 
           {% for product in details %}
         <h1 class="my-4">{{ product['name'] }}</h1>
-        <small class="text-muted">Trouvez le livre qu'il vous faut dans nos rubriques :</small>
-        <div class="list-group">
-              {% for category in categories %}
-          <a href="#" class="list-group-item">{{ category['name'] }}</a>
-              {% if not loop.last %}
-              {% endif %}
-              {% endfor %}
-        </div>
 
       </div>
       <!-- /.col-lg-3 -->
@@ -40,34 +32,31 @@
             <p class="card-text">{{ product['description'] }}</p>
             <small class="text-muted">Vendeur : {{ product['username']}}</small>
             <br />
-            <span class="text-warning">★ ★ ★ ★ ☆</span>
-            4.0 stars
           </div>
             <button class="btn btn-success" type="submit"><i class="fas fa-shopping-cart"></i> Ajouter au panier</button>
         </div>
         <!-- /.card -->
 
-        <div class="card card-outline-secondary my-4">
-          <div class="card-header">
-            Product Reviews
-          </div>
-          <div class="card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-            <small class="text-muted">Posted by Anonymous on 3/1/17</small>
-            <hr>
-            <a href="#" class="btn btn-success">Leave a Review</a>
-          </div>
-        </div>
-        <!-- /.card -->
           {% if not loop.last %}
           {% endif %}
           {% endfor %}
+
+        <div class="card card-outline-secondary my-4">
+          <div class="card-header">
+            Commentaires
+          </div>
+          <div class="card-body">
+            {% for product in comments %}
+            <p>{{ product['comment'] }}</p>
+            <small class="text-muted">Ajouté par {{ product['username'] }}</small>
+            <hr>
+            {% if not loop.last %}
+            {% endif %}
+            {% endfor %}
+            <a href="#" class="btn btn-success">Laisser un commentaire</a>
+          </div>
+        </div>
+        <!-- /.card -->
       </div>
       <!-- /.col-lg-9 -->
 
