Améliorations + mise en place du panier

--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -51,8 +51,8 @@
           {% include 'categories.html' %}
         </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> Mon panier</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i> Mon panier</a>
           </li>
         </ul>
           <form class="form-inline my-2 my-lg-0" method="GET" action="/search">
