--- a/book/templates/product/detail.html
+++ b/book/templates/product/detail.html
@@ -33,7 +33,9 @@
             <small class="text-muted">Vendeur : {{ product['username']}}</small>
             <br />
           </div>
-            <button class="btn btn-success" type="submit"><i class="fas fa-shopping-cart"></i> Ajouter au panier</button>
+                    <form action="{{ url_for('cart.addCart', id=product['id']) }}" method="post">
+                      <input class="btn btn-success mb-2" type="submit" value="Ajouter au panier" onclick="return confirm('Ajouter ce produit au panier ?');">
+                    </form>
         </div>
         <!-- /.card -->
 
