--- a/book/templates/cart/index.html
+++ b/book/templates/cart/index.html
@@ -76,7 +76,7 @@
                             <td></td>
                             <td></td>
                             <td><strong>Total</strong></td>
-                            <td class="text-right"><strong>{{totalPrice + 6.90}} €</strong></td>
+                            <td class="text-right"><strong>{{totalPrice + 6.90 | round }} €</strong></td>
                         </tr>
                     </tbody>
                 </table>
