--- a/book/templates/cart/index.html
+++ b/book/templates/cart/index.html
@@ -19,6 +19,7 @@
     <div class="row">
         <div class="col-12">
             <div class="table-responsive">
+                {% if panier %}
                 <table class="table table-striped">
                     <thead>
                         <tr>
@@ -31,6 +32,7 @@
                         </tr>
                     </thead>
                     <tbody>
+                    {% endif %}
                     {% for cart in panier %}
                         <tr>
                             <td>
@@ -53,13 +55,12 @@
                         </tr>
                   {% if not loop.last %}
                   {% endif %}
-                  {% endfor %}
                         <tr>
                             <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>Sub-Total</td>
+                            <td>Sous-Total</td>
                             <td class="text-right">{{totalPrice}} €</td>
                         </tr>
                         <tr>
@@ -79,9 +80,11 @@
                             <td class="text-right"><strong>{{totalPrice + 6.90 | round }} €</strong></td>
                         </tr>
                     </tbody>
+                    {% endfor %}
                 </table>
             </div>
         </div>
+        {% if panier %}
         <div class="col mb-2">
             <div class="row">
                 <div class="col-sm-12  col-md-6">
@@ -92,6 +95,9 @@
                 </div>
             </div>
         </div>
+        {% else %}
+        <p>Votre panier est vide</p>
+        {% endif %}
     </div>
 </div>
 
