--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -27,7 +27,7 @@
             {% if g.admin %}
             <a class="dropdown-item" href="/admin">Administration</a>
             {% endif %}
-            <a class="dropdown-item" href="/create">Vendre un livre</a>
+            <a class="dropdown-item" href="/add-book">Vendre un livre</a>
             <a class="dropdown-item" href="/inventory">Ma boutique</a>
             <a class="dropdown-item" href="/category/create">Ajouter une catégorie</a>
             <a class="dropdown-item" href="/category/index">Mes catégories</a>
