--- a/book/templates/cart/index.html
+++ b/book/templates/cart/index.html
@@ -11,7 +11,7 @@
     <p class="lead">Sur BookShop, achetez et vendez vos livres neufs ou d'occasion !</p>
 <section class="jumbotron text-center">
     <div class="container">
-        <h1 class="jumbotron-heading">E-COMMERCE CART</h1>
+        <h1 class="jumbotron-heading">MON PANIER</h1>
      </div>
 </section>
 
