--- a/book/templates/product/detail.html
+++ b/book/templates/product/detail.html
@@ -33,9 +33,11 @@
             <small class="text-muted">Vendeur : {{ product['username']}}</small>
             <br />
           </div>
+                    {% if g.user['id'] != product['author_id'] %}
                     <form action="{{ url_for('cart.addCart', id=product['id']) }}" method="post">
                       <input class="btn btn-success mb-2" type="submit" value="Ajouter au panier" onclick="return confirm('Ajouter ce produit au panier ?');">
                     </form>
+                    {% endif %}
         </div>
         <!-- /.card -->
 
