--- a/book/templates/cart/index.html
+++ b/book/templates/cart/index.html
@@ -56,6 +56,8 @@
                   {% if not loop.last %}
                   {% endif %}
                   {% endfor %}
+
+                  {% if panier %}
                         <tr>
                             <td></td>
                             <td></td>
@@ -80,6 +82,7 @@
                             <td><strong>Total</strong></td>
                             <td class="text-right"><strong>{{totalPrice + 6.90 | round }} €</strong></td>
                         </tr>
+                    {% endif %}
                     </tbody>
                 </table>
             </div>
