--- a/book/templates/administration/command.html
+++ b/book/templates/administration/command.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/admin">Utilisateurs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#">Catégories</a>
+            <a class="nav-link" href="../admin/category">Catégories</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../admin/product">Produits</a>
@@ -31,10 +31,10 @@
             <a class="nav-link disabled" href="#">Commentaires</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../admin/order">Suivi des commandes</a>
+            <a class="nav-link active" href="#">Suivi des commandes</a>
           </li>
       </ul>
-        <h3 class="mt-3">Gestion des catégories</h3>
+        <h3 class="mt-3">Gestion des commandes</h3>
 
           <div class="col">
 
@@ -43,18 +43,22 @@
                 <tr>
                   <th scope="col">#</th>
                   <th scope="col">Nom</th>
+                  <th scope="col">Prix</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Client</th>
                   <th scope="col">Action</th>
                 </tr>
               </thead>
               <tbody>
-              {% for admin in categories %}
+              {% for admin in orders %}
                 <tr>
                   <th scope="row">{{ admin['id'] }}</th>
                   <td>{{ admin['name'] }}</td>
+                  <td>{{ admin['price'] }}</td>
+                  <td>{{ admin['created'] }}</td>
+                  <td>{{ admin['username'] }}</td>
                   <td>
-                      <form action="{{ url_for('admin.delete_category', id=admin['id']) }}" method="post">
-                      <input class="btn btn-danger btn-sm mb-2" type="submit" value="Supprimer" onclick="return confirm('Are you sure?');">
-                      </form>
+                    <button class="btn btn-block btn-success">Valider la commande</button>
                   </td>
                 </tr>
               {% if not loop.last %}
