--- a/book/templates/administration/product.html
+++ b/book/templates/administration/product.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Commentaires</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../admin/order">Suivi des commandes</a>
+          </li>
       </ul>
         <h3 class="mt-3">Gestion des produits</h3>
 
