--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -31,6 +31,7 @@
             <a class="dropdown-item" href="/inventory">Ma boutique</a>
             <a class="dropdown-item" href="/category/create">Ajouter une catégorie</a>
             <a class="dropdown-item" href="/category/index">Mes catégories</a>
+            <a class="dropdown-item" href="/order">Mes commandes</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Se déconnecter</a>
           </div>
